# ContactsDB

./: CMakeLists.txt  README.md  contacts_app_documentation.md  schema.sql  setup.sh  setup_script_documentation.md
include/: ContactDialogs.hpp  DB.hpp  DBConnectionDialog.hpp  MainWindow.hpp
src/: ContactDialogs.cpp  DB.cpp  DBConnectionDialog.cpp  MainWindow.cpp  main.cpp
